--- a/index.html
+++ b/index.html
@@ -1,11 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
   <meta charset="UTF-8">
+
+  <meta name="description" content="At Hotel Majestic we ensure that your comfort is guaranteed with our state of the art infrastructures and workers made to suit you.">
+
+  <meta name="keywords" content="Hotel Majestic, HotelMajestic, Hotel">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- Fav Icon -->
+  <link rel="icon" href="img/favicon.png" type="image/gif" sizes="40x40">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Source+Sans+Pro:wght@200;300;400&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap Style Sheets -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="asset/css/style.css">
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/fc9346f24c.js" crossorigin="anonymous"></script>
+
+  <title>Hotel</title>
 </head>
+
 <body>
-  
+  <!-- Section - Hero -->
+  <section id="hero">
+    <!-- Header -->
+    <header>
+      <!-- Nav -->
+      <div id="navbar">
+        <div class="hero-bg">
+          <div class="overlay container-fluid py-3 px-5">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+              <a class="navbar-brand" href="#">
+                <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
+              </a>
+
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a class="nav-link smooth-scroll" href="#home">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link smooth-scroll" href="#services">Rooms</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link smooth-scroll" href="#about">Facilities</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link smooth-scroll" href="#contact">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+
+            <div class="hero-content d-flex">
+              <div class="hero-desc">
+                <h2 class="mb-4">Welcome To Hotel Majestic</h2>
+                <p>
+                  At Hotel Majestic we ensure that your comfort is guaranteed with our state of art infrastructures and workers made to suit you At Hotel Majestic we ensure that your comfort is guaranteed with our.
+                </p>
+                <a href="#" class="btn btn-primary btn-lg mt-4">Take a Tour<i class="fas fa-arrow-right pl-4"></i></a>
+              </div>
+            </div>
+          </div> <!-- .overlay -->
+        </div> <!-- .hero-bg -->
+      </div> <!-- #navbar -->
+    </header>
+  </section>
+
+  <!-- Section - About Us -->
+  <section id="about-us">
+    <div class="about-container container-fluid">
+      <div class="about-content">
+        <h2 class="mb-4">We Are One of The <br />Best Hotels Up North</h2>
+        <p>Scaling design through hiring, without putting standards in place, is a myth. With every new hire, new ideas for color palettes, typos graphy and patterns appear in the product, growing the inconsis sistency and increasing the maintenance cost. Every new hiring increases the design entropy. There’s only one way to stop they growth of the chaos. Committing to running a design systemsic process. Gradual growth of a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system.</p>
+        <a href="#" class="btn btn-primary btn-lg mt-4">About Us<i class="fas fa-arrow-right pl-4"></i></a>
+      </div>
+      <div class="about-img"></div>
+    </div>
+  </section>
+
+  <!-- Section - Rooms and Suites -->
+  <section id="rooms-suites">
+    <div class="rooms-container container-fluid">
+      <div class="rooms-content">
+        <h2 class="mb-5">Our Executive <br />Rooms and Suites</h2>
+        <h3 class="my-4">Classic Room</h3>
+        <p>All our classic rooms are light adored and beautiful giving you sea side view a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system. a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system.</p>
+        <a href="#" class="btn btn-primary btn-lg mt-4">About Us<i class="fas fa-arrow-right pl-4"></i></a>
+      </div>
+      <div class="rooms-img"></div>
+    </div>
+  </section>
+
+  <!-- Section - Facilities -->
+  <section id="facilities"></section>
+
+  <!-- Section - Book Now -->
+  <section id="book-now"></section>
+
+  <!-- Section - Footer -->
+  <section id="footer"></section>
+
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <!-- Custom JS -->
+  <script src="js/custom.js"></script>
 </body>
+
 </html>
