Added footer section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,48 @@
   </section>
 
   <!-- Section - Footer -->
-  <section id="footer"></section>
+  <section id="footer">
+    <footer class="dark-gray">
+      <div class="container-fluid py-3 px-5">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="#">
+            <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
+          </a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#home">HOME <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#about">COOKIES POLICY</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#contact">LEGAL TERMS</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="d-flex justify-content-between mt-3">
+          <h5>MADE FOR EXCELLENCE</h5>
+          <div class="social-media">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-behance"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </section>
 
 
   <!-- Bootstrap Scripts -->
