--- a/facilities.html
+++ b/facilities.html
@@ -20,7 +20,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="asset/css/style.css">
-      
+        <!-- Facilities CSS -->
+        <link rel="stylesheet" href="facilities.css">
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/fc9346f24c.js" crossorigin="anonymous"></script>
       
