--- a/index.html
+++ b/index.html
@@ -81,128 +81,37 @@
 
   <!-- Section - About Us -->
   <section id="about-us">
-    <div class="about-container container-fluid mx-3 row d-flex align-items-center">
-      <div class="about- col-md-6">
+    <div class="about-container container-fluid">
+      <div class="about-content">
         <h2 class="mb-4">We Are One of The <br />Best Hotels Up North</h2>
         <p>Scaling design through hiring, without putting standards in place, is a myth. With every new hire, new ideas for color palettes, typos graphy and patterns appear in the product, growing the inconsis sistency and increasing the maintenance cost. Every new hiring increases the design entropy. There’s only one way to stop they growth of the chaos. Committing to running a design systemsic process. Gradual growth of a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system.</p>
         <a href="#" class="btn btn-primary btn-lg mt-4">About Us<i class="fas fa-arrow-right pl-4"></i></a>
       </div>
-      <div class="about-img col-md-6"></div>
+      <div class="about-img"></div>
     </div>
   </section>
 
   <!-- Section - Rooms and Suites -->
   <section id="rooms-suites">
-    <div class="rooms-container container-fluid mx-3 row d-flex align-items-center">
-      <div class="rooms-content col-md-6">
+    <div class="rooms-container container-fluid">
+      <div class="rooms-content">
         <h2 class="mb-5">Our Executive <br />Rooms and Suites</h2>
         <h3 class="my-4">Classic Room</h3>
         <p>All our classic rooms are light adored and beautiful giving you sea side view a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system. a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system.</p>
-        <a href="#" class="btn btn-primary btn-lg mt-4">See all Rooms<i class="fas fa-arrow-right pl-4"></i></a>
+        <a href="#" class="btn btn-primary btn-lg mt-4">About Us<i class="fas fa-arrow-right pl-4"></i></a>
       </div>
-      <div class="rooms-img col-md-6"></div>
+      <div class="rooms-img"></div>
     </div>
   </section>
 
   <!-- Section - Facilities -->
-  <section id="facilities" class="dark-gray">
-    <div class="facility-wrap container-fluid p-5">
-      <div class="text-center mb-5">
-        <h2 class="mb-5">Our Facilities</h2>
-        <p>All our classic rooms are light adored and beautiful giving you a sea side view a design system, <br />equals gradually in decline of inconsistency and gradual increase of the speed offer software development Design scales.</p>
-      </div>
-      <div class="row container mx-auto">
-        <div class="col-md-4">
-          <div class="facilities-card">
-            <div>
-              <img src="asset/img/photo-of-mirrors-in-bathroom-2507016.jpg" class="card-img-top" alt="Ladies Spa">
-            </div>
-            <div class="mt-3">
-              <h5>Ladies Spa</h5>
-              <a href="#"><img class="arrow-btn" src="asset/img/Group 2217.svg" alt=""></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="facilities-card">
-            <div>
-              <img src="asset/img/christian-lambert-vmIWr0NnpCQ-unsplash.jpg" class="card-img-top" alt="Ladies Spa">
-            </div>
-            <div class="mt-3">
-              <h5>Swimming Pool</h4>
-              <a href="#"><img class="arrow-btn" src="asset/img/Group 2217.svg" alt=""></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="facilities-card">
-            <div>
-              <img src="asset/img/rectangular-brown-wooden-table-2291599.jpg" class="card-img-top" alt="Ladies Spa">
-            </div>
-            <div class="mt-3">
-              <h5>Chinese Restaurant</h5>
-              <a href="#"><img class="arrow-btn" src="asset/img/Group 2217.svg" alt=""></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <section id="facilities"></section>
 
-    <!-- Book Now -->
-    <div id="book-now" class="light-gray row p-5 d-flex justify-content-between align-items-center">
-      <div>
-        <h5>Need To Book a Room Now?</h5>
-        <p>We've made provisions for you to book your rooms online.</p>
-      </div>
-      <div>
-        <a href="#" class="btn btn-primary btn-lg mt-4">Take a Tour<i class="fas fa-arrow-right pl-4"></i></a>
-      </div>
-    </div>
-  </section>
+  <!-- Section - Book Now -->
+  <section id="book-now"></section>
 
   <!-- Section - Footer -->
-  <section id="footer">
-    <footer class="dark-gray">
-      <div class="container-fluid py-3 px-5">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="#">
-            <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
-          </a>
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#home">HOME <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#about">COOKIES POLICY</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#contact">LEGAL TERMS</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <div class="d-flex justify-content-between mt-3">
-          <h5>MADE FOR EXCELLENCE</h5>
-          <div class="social-media">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-behance"></i></a>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </section>
+  <section id="footer"></section>
 
 
   <!-- Bootstrap Scripts -->
