--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col-md-4">
           <div class="facilities-card">
             <div>
-              <img src="asset/img/christian-lambert-vmIWr0NnpCQ-unsplash.jpg" class="card-img-top" alt="Ladies Spa">
+              <img src="asset/img/christian-lambert-vmIWr0NnpCQ-unsplash.jpg" class="card-img-top" alt="Swimming Pool">
             </div>
             <div class="mt-3">
               <h5>Swimming Pool</h4>
@@ -137,7 +137,7 @@
         <div class="col-md-4">
           <div class="facilities-card">
             <div>
-              <img src="asset/img/rectangular-brown-wooden-table-2291599.jpg" class="card-img-top" alt="Ladies Spa">
+              <img src="asset/img/rectangular-brown-wooden-table-2291599.jpeg" class="card-img-top" alt="Chinese Restaurant">
             </div>
             <div class="mt-3">
               <h5>Chinese Restaurant</h5>
@@ -164,16 +164,12 @@
   <section id="footer">
     <footer class="dark-gray">
       <div class="container-fluid py-3 px-5">
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark d-flex justify-content-between">
           <a class="navbar-brand" href="#">
             <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
           </a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="" id=""> <!-- .collapse .navbar-collapse #navbarNav -->
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link smooth-scroll" href="#home">HOME <span class="sr-only">(current)</span></a>
