Updated facilities page

--- a/facilities.html
+++ b/facilities.html
@@ -25,8 +25,6 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="asset/css/style.css">
-  <!-- Facilities CSS -->
-  <link rel="stylesheet" href="asset/css/facilities.css">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/fc9346f24c.js" crossorigin="anonymous"></script>
 
@@ -49,13 +47,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#home">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link smooth-scroll" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#services">Rooms</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active smooth-scroll" href="#about">Facilities</a>
+              <a class="nav-link active smooth-scroll" href="facilities.html">Facilities</a>
             </li>
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#contact">Contact Us</a>
@@ -63,21 +61,70 @@
           </ul>
         </div>
       </nav>
-      <!-- </div> .container -->
-    </div> <!-- #navbar -->
+    </div> <!-- container -->
+  </div> <!-- #navbar -->
 
-    <!-- Intro Section -->
-    <section class="facility-intro">
-      <div class="intro-div container-fluid">
-        <h3 class="mb-4 intro-heading">Our Facilities and Services</h3>
-        <div class="intro-text">
-          <p>A Hotel is an establishment that provides paid lodging on a short term basis. <br>
-            facilities provided may range from a modest-quality mattress in a small room to large suites
-            with bigger, higher quality.
-          </p>
-        </div>
+  <!-- Intro Section -->
+  <section class="facility-intro">
+    <div class="intro-div container-fluid">
+      <h3 class="mb-4 intro-heading">Our Facilities and Services</h3>
+      <div class="intro-text">
+        <p>A Hotel is an establishment that provides paid lodging on a short term basis. <br>
+          facilities provided may range from a modest-quality mattress in a small room to large suites
+          with bigger, higher quality.
+        </p>
       </div>
-    </section>
+    </div>
+  </section>
+
+  <!-- Section - Footer -->
+  <section id="footer">
+    <footer class="dark-gray">
+        <div class="container-fluid py-3 px-5">
+            <nav class="navbar navbar-expand-lg navbar-dark d-flex justify-content-between">
+                <a class="navbar-brand" href="#">
+                    <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
+                </a>
+
+                <div class="" id=""> <!-- .collapse .navbar-collapse #navbarNav -->
+                    <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link smooth-scroll" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth-scroll" href="#about">COOKIES POLICY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link smooth-scroll" href="#contact">LEGAL TERMS</a>
+                    </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="d-flex justify-content-between mt-3">
+                <h5>MADE FOR EXCELLENCE</h5>
+                <div class="social-media">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-behance"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+  </section>
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  <!-- Custom JS -->
+  <script src="js/custom.js"></script>
+  
 </body>
 
 </html>
