add one feature to company section of contact page

--- a/contact.html
+++ b/contact.html
@@ -107,13 +107,13 @@
           <h6>Hote Address</h6>
           <p>Plot 47, K line Ewer housing</p>
           <p>Estate, Uyo, Nigeria</p>
-          <p>www.hotelmajestic.com</p>
+          <p><a href="#">www.hotelmajestic.com</a></p>
         </div>
         <div class="box">
           <h6>For Reservations</h6>
           <p>+234 908 378 1815</p>
           <p>+234 906 350 4756</p>
-          <p>info@hotelmajestic.com</p>
+          <p><a href="#">info@hotelmajestic.com</a></p>
         </div>
         <div class="box">
           <h6>Phone Lines</h6>
@@ -124,8 +124,9 @@
           <h6>Follow Us On Social
             Media</h6>
           <div class="social-media">
-            <a href="#"><i class="fab fa-phone"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
           </div>
