--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link smooth-scroll" href="#home">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link smooth-scroll" href="#services">Rooms</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="facilities.html">Facilities</a>
+                    <a class="nav-link smooth-scroll" href="#about">Facilities</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link smooth-scroll" href="#contact">Contact Us</a>
@@ -172,7 +172,7 @@
           <div class="" id=""> <!-- .collapse .navbar-collapse #navbarNav -->
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link smooth-scroll" href="#home">HOME <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
