--- a/facilities.html
+++ b/facilities.html
@@ -80,51 +80,56 @@
   <!-- Section - Footer -->
   <section id="footer">
     <footer class="dark-gray">
-        <div class="container-fluid py-3 px-5">
-            <nav class="navbar navbar-expand-lg navbar-dark d-flex justify-content-between">
-                <a class="navbar-brand" href="#">
-                    <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
-                </a>
+      <div class="container-fluid py-3 px-5">
+        <nav class="navbar navbar-expand-lg navbar-dark d-flex justify-content-between">
+          <a class="navbar-brand" href="#">
+            <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
+          </a>
 
-                <div class="" id=""> <!-- .collapse .navbar-collapse #navbarNav -->
-                    <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="index.html">HOME <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="#about">COOKIES POLICY</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="#contact">LEGAL TERMS</a>
-                    </li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="d-flex justify-content-between mt-3">
-                <h5>MADE FOR EXCELLENCE</h5>
-                <div class="social-media">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-behance"></i></a>
-                </div>
-            </div>
+          <div class="" id="">
+            <!-- .collapse .navbar-collapse #navbarNav -->
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#home">HOME <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#about">COOKIES POLICY</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link smooth-scroll" href="#contact">LEGAL TERMS</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="d-flex justify-content-between mt-3">
+          <h5>MADE FOR EXCELLENCE</h5>
+          <div class="social-media">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-behance"></i></a>
+          </div>
         </div>
+      </div>
     </footer>
   </section>
 
   <!-- Bootstrap Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
   <!-- Custom JS -->
   <script src="js/custom.js"></script>
-  
+
 </body>
 
 </html>
