--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
 
-  <meta name="description" content="At Hotel Majestic we ensure that your comfort is guaranteed with our state of the art infrastructures and workers made to suit you.">
+  <meta name="description"
+    content="At Hotel Majestic we ensure that your comfort is guaranteed with our state of the art infrastructures and workers made to suit you.">
 
   <meta name="keywords" content="Hotel Majestic, HotelMajestic, Hotel">
 
@@ -15,10 +16,13 @@
   <link rel="icon" href="img/favicon.png" type="image/gif" sizes="40x40">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Source+Sans+Pro:wght@200;300;400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Source+Sans+Pro:wght@200;300;400&display=swap"
+    rel="stylesheet">
 
   <!-- Bootstrap Style Sheets -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="asset/css/style.css">
 
@@ -42,20 +46,21 @@
                 <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
               </a>
 
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
 
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link smooth-scroll" href="#home">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link smooth-scroll" href="#services">Rooms</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="facilities.html">Facilities</a>
+                    <a class="nav-link smooth-scroll" href="#about">Facilities</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link smooth-scroll" href="#contact">Contact Us</a>
@@ -68,7 +73,8 @@
               <div class="hero-desc">
                 <h2 class="mb-4">Welcome To Hotel Majestic</h2>
                 <p>
-                  At Hotel Majestic we ensure that your comfort is guaranteed with our state of art infrastructures and workers made to suit you At Hotel Majestic we ensure that your comfort is guaranteed with our.
+                  At Hotel Majestic we ensure that your comfort is guaranteed with our state of art infrastructures and
+                  workers made to suit you At Hotel Majestic we ensure that your comfort is guaranteed with our.
                 </p>
                 <a href="#" class="btn btn-primary btn-lg mt-4">Take a Tour<i class="fas fa-arrow-right pl-4"></i></a>
               </div>
@@ -84,7 +90,12 @@
     <div class="about-container container-fluid mx-3 row d-flex align-items-center">
       <div class="about- col-md-6">
         <h2 class="mb-4">We Are One of The <br />Best Hotels Up North</h2>
-        <p>Scaling design through hiring, without putting standards in place, is a myth. With every new hire, new ideas for color palettes, typos graphy and patterns appear in the product, growing the inconsis sistency and increasing the maintenance cost. Every new hiring increases the design entropy. There’s only one way to stop they growth of the chaos. Committing to running a design systemsic process. Gradual growth of a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system.</p>
+        <p>Scaling design through hiring, without putting standards in place, is a myth. With every new hire, new ideas
+          for color palettes, typos graphy and patterns appear in the product, growing the inconsis sistency and
+          increasing the maintenance cost. Every new hiring increases the design entropy. There’s only one way to stop
+          they growth of the chaos. Committing to running a design systemsic process. Gradual growth of a design system,
+          equals gradually in decline of inconsistency and gradual increase of the speed offer software development.
+          Design scales. But it scales only with and design system.</p>
         <a href="#" class="btn btn-primary btn-lg mt-4">About Us<i class="fas fa-arrow-right pl-4"></i></a>
       </div>
       <div class="about-img col-md-6"></div>
@@ -97,7 +108,11 @@
       <div class="rooms-content col-md-6">
         <h2 class="mb-5">Our Executive <br />Rooms and Suites</h2>
         <h3 class="my-4">Classic Room</h3>
-        <p>All our classic rooms are light adored and beautiful giving you sea side view a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system. a design system, equals gradually in decline of inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only with and design system.</p>
+        <p>All our classic rooms are light adored and beautiful giving you sea side view a design system, equals
+          gradually in decline of inconsistency and gradual increase of the speed offer software development. Design
+          scales. But it scales only with and design system. a design system, equals gradually in decline of
+          inconsistency and gradual increase of the speed offer software development. Design scales. But it scales only
+          with and design system.</p>
         <a href="#" class="btn btn-primary btn-lg mt-4">See all Rooms<i class="fas fa-arrow-right pl-4"></i></a>
       </div>
       <div class="rooms-img col-md-6"></div>
@@ -109,7 +124,9 @@
     <div class="facility-wrap container-fluid p-5">
       <div class="text-center mb-5">
         <h2 class="mb-5">Our Facilities</h2>
-        <p>All our classic rooms are light adored and beautiful giving you a sea side view a design system, <br />equals gradually in decline of inconsistency and gradual increase of the speed offer software development Design scales.</p>
+        <p>All our classic rooms are light adored and beautiful giving you a sea side view a design system, <br />equals
+          gradually in decline of inconsistency and gradual increase of the speed offer software development Design
+          scales.</p>
       </div>
       <div class="row container mx-auto">
         <div class="col-md-4">
@@ -130,14 +147,15 @@
             </div>
             <div class="mt-3">
               <h5>Swimming Pool</h4>
-              <a href="#"><img class="arrow-btn" src="asset/img/Group 2217.svg" alt=""></a>
+                <a href="#"><img class="arrow-btn" src="asset/img/Group 2217.svg" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="facilities-card">
             <div>
-              <img src="asset/img/rectangular-brown-wooden-table-2291599.jpeg" class="card-img-top" alt="Chinese Restaurant">
+              <img src="asset/img/rectangular-brown-wooden-table-2291599.jpeg" class="card-img-top"
+                alt="Chinese Restaurant">
             </div>
             <div class="mt-3">
               <h5>Chinese Restaurant</h5>
@@ -169,10 +187,11 @@
             <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
           </a>
 
-          <div class="" id=""> <!-- .collapse .navbar-collapse #navbarNav -->
+          <div class="" id="">
+            <!-- .collapse .navbar-collapse #navbarNav -->
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link smooth-scroll" href="#home">HOME <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
@@ -203,8 +222,12 @@
 
   <!-- Bootstrap Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
   <!-- Custom JS -->
   <script src="js/custom.js"></script>
