Added compressed images

--- a/facilities.html
+++ b/facilities.html
@@ -113,7 +113,7 @@
          <div class="col-md-12">
           <div class="facilities-card">
             <div>
-              <img src="asset/img/rectangular-brown-wooden-table-2291599.jpg" alt="Chinese Restaurants" class="card-img-top">
+              <img src="asset/img/rectangular-brown-wooden-table-2291599.jpeg" alt="Chinese Restaurants" class="card-img-top">
             </div>
             <div class="mt-3">
               <h5>Chinese Restaurants</h5>
