--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- Bootstrap Style Sheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="asset/css/style.css">
 
@@ -49,16 +50,16 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="#home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link smooth-scroll" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="#services">Rooms</a>
+                    <a class="nav-link smooth-scroll" href="rooms.html">Rooms</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="#about">Facilities</a>
+                    <a class="nav-link smooth-scroll" href="facilities.html">Facilities</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link smooth-scroll" href="#contact">Contact Us</a>
+                    <a class="nav-link smooth-scroll" href="contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -160,45 +161,32 @@
     </div>
   </section>
 
-  <!-- Section - Footer -->
-  <section id="footer">
-    <footer class="dark-gray">
-      <div class="container-fluid py-3 px-5">
-        <nav class="navbar navbar-expand-lg navbar-dark d-flex justify-content-between">
-          <a class="navbar-brand" href="#">
-            <img src="asset/img/Vector.svg" width="127px" height="45px" alt="Hotel Majestic">
-          </a>
+  <!-- Footer -->
+  <footer id="footer">
+    <div>
+        <img src="asset/img2/Hello.svg" alt="#">
+        <img  src="asset/img2/hotel majestic.svg" alt="#">
+    </div>
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a  href="contact.html">CONTACT</a></li>
+        <li><a href="#">COOKIES POLICY</a></li>
+        <li><a href="#">LEGAL TERM</a></li>
+    </ul>
+  </footer>
 
-          <div class="" id=""> <!-- .collapse .navbar-collapse #navbarNav -->
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#home">HOME <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#services">CONTACT US</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#about">COOKIES POLICY</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link smooth-scroll" href="#contact">LEGAL TERMS</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <div class="d-flex justify-content-between mt-3">
-          <h5>MADE FOR EXCELLENCE</h5>
-          <div class="social-media">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-behance"></i></a>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </section>
+  <footer id="footer2">
+    <div>
+        <p>MADE FOR EXCELLENCE</p>
+    </div>
+    <ul>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fas fa-basketball-ball"></i></a></li>
+        <li><a href="#"><i class="fab fa-behance"></i></a></li>
+    </ul>
+  </footer>
 
 
   <!-- Bootstrap Scripts -->
